--- a/style.css
+++ b/style.css
@@ -1,3 +1,98 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Sans:wght@100;200;300;400;500;600&family=Mulish:wght@200;300;400;500&display=swap");
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+}
+.img-wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.5;
+  animation: zoom 25s;
+}
+
+@keyframes zoom {
+  0% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.banner {
+  position: absolute;
+  left: 15%;
+  top: 30%;
+}
+
+.banner h1 {
+  font-family: "Baloo Da 2", serif;
+  color: #fff;
+  font-size: 3.5rem;
+  font-weight: 100;
+  text-shadow: 0.2rem 0.2rem 2px rgba(0, 0, 0, 0.4);
+  line-height: 3.5rem;
+  margin-bottom: 1.5rem;
+  opacity: 0;
+  animation: moveBanner 1s 0.5s forwards;
+}
+
+.banner p {
+  font-family: "Josefin Sans", serif;
+  color: #fff;
+  font-size: 2rem;
+  text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.4);
+  font-weight: 300;
+  margin-bottom: 1.5rem;
+  opacity: 0;
+  animation: moveBanner 1s 0.7s forwards;
+}
+
+.banner button {
+  font-family: "Mulish", serif;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  background: #8e2de2;
+  background: -webkit-linear-gradient(to right, #4a00e0, #8e2de2);
+  background: linear-gradient(to right, #4a00e0, #8e2de2);
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0;
+  animation: moveBanner 1s 0.8s forwards;
+}
+
+.banner button:hover {
+  opacity: 0.8;
+  color: #000;
+}
+
+@keyframes moveBanner {
+  0% {
+    transform: translateY(10rem) rotateY(-30deg);
+  }
+  100% {
+    transform: translateY(0) rotateY(0);
+    opacity: 1;
+  }
+}
