--- a/style.css
+++ b/style.css
@@ -5,6 +5,75 @@
 * {
   margin: 0;
   padding: 0;
+  text-decoration: none;
+  list-style: none;
+}
+
+:root {
+  --font-primary: "Baloo Da 2";
+  --font-secundary: "Josefin Sans";
+  --font-action: "Mulish";
+}
+
+.hamburguer {
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  z-index: 100;
+  right: 2rem;
+  top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  transition: all 0.8s;
+  cursor: pointer;
+}
+
+.show-menu .hamburguer {
+  right: 16rem;
+}
+
+.line {
+  width: 100%;
+  height: 0.1rem;
+  background-color: #fff;
+  box-shadow: 0.1rem 0.1rem 1px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  border: 0.1px solid #fff;
+  transition: transform 0.8s;
+}
+
+.show-menu #line1 {
+  transform: rotate(45deg) translate(0.3rem, 0.38rem);
+}
+
+.show-menu #line3 {
+  transform: rotate(-45deg) translate(0.3rem, -0.38rem);
+}
+
+.show-menu #line2 {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.hamburguer span {
+  position: absolute;
+  left: 3rem;
+  background-color: #4a00e0;
+  color: #fff;
+  font-family: var(--font-action), serif;
+  padding: 0.4rem 1rem;
+  opacity: 0;
+  transition: all 0.6s;
+  border-radius: 5px;
+}
+
+.show-menu .hamburguer:hover span {
+  opacity: 1;
+}
+
+.hamburguer span::before {
+  opacity: 0;
 }
 
 header {
@@ -44,7 +113,7 @@ header {
 }
 
 .banner h1 {
-  font-family: "Baloo Da 2", serif;
+  font-family: var(--font-primary), serif;
   color: #fff;
   font-size: 3.5rem;
   font-weight: 100;
@@ -56,7 +125,7 @@ header {
 }
 
 .banner p {
-  font-family: "Josefin Sans", serif;
+  font-family: var(--font-secundary), serif;
   color: #fff;
   font-size: 2rem;
   text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.4);
@@ -67,7 +136,7 @@ header {
 }
 
 .banner button {
-  font-family: "Mulish", serif;
+  font-family: var(--font-action), serif;
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
@@ -80,6 +149,7 @@ header {
   cursor: pointer;
   opacity: 0;
   animation: moveBanner 1s 0.8s forwards;
+  transition: color 0.6s;
 }
 
 .banner button:hover {
@@ -95,4 +165,65 @@ header {
     transform: translateY(0) rotateY(0);
     opacity: 1;
   }
+}
+
+.sidebar {
+  width: 20rem;
+  height: 100vh;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  right: -20rem;
+  transition: all 1s;
+}
+
+.show-menu .sidebar {
+  right: 0;
+}
+
+.menu {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menu-item {
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+.menu-link {
+  font-family: var(--font-action), serif;
+  color: #555;
+  font-weight: 500;
+  font-size: 1.5rem;
+  transition: color 0.6s;
+}
+
+.menu-link:hover {
+  color: #4a00e0;
+}
+
+.social-media {
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.social-media i {
+  color: #555;
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: color 0.6s;
+}
+
+.social-media i:hover {
+  color: #4a00e0;
 }
