--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
   box-shadow: 0.1rem 0.1rem 1px rgba(0, 0, 0, 0.5);
   cursor: pointer;
   border: 0.1px solid #fff;
-  transition: transform 0.8s;
+  transition: transform 1s;
 }
 
 .show-menu #line1 {
@@ -175,6 +175,7 @@ header {
   top: 0;
   right: -20rem;
   transition: all 1s;
+  z-index: 80;
 }
 
 .show-menu .sidebar {
@@ -226,4 +227,173 @@ header {
 
 .social-media i:hover {
   color: #4a00e0;
+}
+
+.conhecimentos {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(6, 6rem);
+  row-gap: 0.5rem;
+}
+
+.conhecimento:nth-child(1) {
+  grid-column: 4 / 7;
+  grid-row: 1 / 3;
+}
+.conhecimento:nth-child(2) {
+  grid-column: 3 / 6;
+  grid-row: 3 / 5;
+}
+.conhecimento:nth-child(3) {
+  grid-column: 4 / 7;
+  grid-row: 5 / -1;
+}
+.conhecimento:nth-child(4) {
+  grid-column: 11 / 14;
+  grid-row: 1 / 3;
+}
+.conhecimento:nth-child(5) {
+  grid-column: 12 / 15;
+  grid-row: 3 / 5;
+}
+.conhecimento:nth-child(6) {
+  grid-column: 11 / 14;
+  grid-row: 5 / -1;
+}
+
+.sessao-conhecimentos {
+  background-color: #eee;
+}
+
+.sessao-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sessao-header h1 {
+  font-family: var(--font-primary);
+  font-size: 2rem;
+  color: #555;
+  border-bottom: solid 3px #4a00e0;
+  margin-bottom: 1.5rem;
+}
+
+.conhecimento-header {
+  display: flex;
+  align-items: center;
+  color: #555;
+}
+
+.conhecimento-header i {
+  font-size: 2.5rem;
+}
+
+.conhecimento-header h3 {
+  font-family: var(--font-secundary);
+  font-size: 2rem;
+  padding-left: 1rem;
+}
+
+.conhecimento-text {
+  font-family: var(--font-secundary);
+  margin-top: 1rem;
+  text-align: justify;
+}
+
+.conhecimentos-img-wrapper {
+  grid-column: 7 / 11;
+  grid-row: 2 / 6;
+  width: 100%;
+}
+
+.conhecimentos-img-wrapper img {
+  object-fit: cover;
+  width: 100%;
+}
+
+.projetos {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card {
+  width: 20rem;
+  height: 30rem;
+  position: relative;
+  margin-bottom: 8rem;
+}
+
+.card-img-wrapper {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 2rem;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 0.5rem;
+}
+
+.card-img-wrapper img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  transition: all 0.4s;
+}
+
+.card:hover .card-img-wrapper img {
+  opacity: 0.4;
+}
+
+.card-info {
+  position: absolute;
+  bottom: 0;
+  padding: 2rem;
+  text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.4s;
+}
+
+.card-info h2 {
+  font-family: var(--font-secundary);
+  font-size: 2rem;
+  font-weight: 500;
+  color: #eee;
+  margin-bottom: 0.5rem;
+}
+
+.card-info h3 {
+  font-family: var(--font-secundary);
+  font-weight: bolder;
+  color: #ff0080;
+  margin-bottom: 0.5rem;
+}
+
+.card-info p {
+  font-family: var(--font-secundary);
+  color: #eee;
+  font-weight: 400;
+  text-shadow: 2 0.2rem 0.3rem rgba(0, 0, 0, 0.8);
+  margin-bottom: 1rem;
+  text-align: justify;
+}
+
+.card-info button {
+  width: 8rem;
+  height: 2.5rem;
+  background: #8e2de2;
+  background: -webkit-linear-gradient(to right, #4a00e0, #8e2de2);
+  background: linear-gradient(to right, #4a00e0, #8e2de2);
+  border: none;
+  border-radius: 0.5rem;
+  color: #eee;
+  font-family: var(--font-action);
+  font-size: 0.8rem;
+  box-shadow: 2 0.2rem 0.3rem rgba(0, 0, 0, 0.8);
+}
+
+.card:hover .card-info {
+  bottom: 2rem;
+  opacity: 1;
+  visibility: visible;
 }
